@@ -157,6 +157,10 @@ class CoursePress_Helper_Integration_WooCommerce {
 		 */
 		add_action( 'woocommerce_order_status_changed', array( __CLASS__, 'woocommerce_order_status_changed' ), 21, 3 );
 
+		/**
+		 * check cart before allow to proceder. Courses can not be buy by guests.
+		 */
+		add_filter( 'pre_option_woocommerce_enable_guest_checkout', array( __CLASS__, 'check_cart_and_user_login' ) );
 	}
 
 	public static function change_order_status( $order_id, $old_status, $new_status ) {
@@ -1008,5 +1012,32 @@ class CoursePress_Helper_Integration_WooCommerce {
 			$key = sprintf( 'course_%d_woo_payment_status', $course_id );
 			update_user_meta( $student_id, $key, $new_status );
 		}
+	}
+
+	/**
+	 * Disable WooCommerce "enable_guest_checkout" option.
+	 *
+	 * Disable WooCommerce "enable_guest_checkout" option when in the cart is
+	 * some course, to avoid guest checkout of a course.
+	 *
+	 * @since 2.0.6
+	 *
+	 * @param mixed $enable_guest_checkout
+	 */
+	public static function check_cart_and_user_login( $enable_guest_checkout ) {
+		if ( is_user_logged_in() ) {
+			return $enable_guest_checkout;
+		}
+		if ( 'no' == $enable_guest_checkout ) {
+			return $enable_guest_checkout;
+		}
+		$cart_data = WC()->cart->get_cart();
+		foreach ( $cart_data as $cart_item_key => $values ) {
+			$_product = $values['data'];
+			if ( CoursePress_Data_Course::is_course( $_product->post->post_parent ) ) {
+				return 'no';
+			}
+		}
+		return $enable_guest_checkout;
 	}
 }
